--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
   "click>=8.1",
   "pydantic>=2.6",
   "pyyaml>=6.0",
-  "tree-sitter>=0.22",
-  "tree-sitter-languages>=1.10",
+  "tree-sitter>=0.25",
+  "tree-sitter-language-pack>=0.13.0",
   "sentence-transformers>=2.7",
   "faiss-cpu>=1.8",
   "numpy>=1.26",
