--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "pyyaml>=6.0",
   "tree-sitter>=0.25",
   "tree-sitter-language-pack>=0.13.0",
+  "google-genai>=0.5",
   "sentence-transformers>=2.7",
   "faiss-cpu>=1.8",
   "numpy>=1.26",
@@ -29,6 +30,7 @@ dependencies = [
 [project.optional-dependencies]
 local = ["sentence-transformers>=2.7"]
 openai = ["openai>=1.3"]
+gemini = ["google-genai>=0.5"]
 dev = [
   "pytest>=8.2.0",
   "black>=24.4.0",
