--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ openai = ["openai>=1.3"]
 gemini = ["google-genai>=0.5"]
 dev = [
   "pytest>=8.2.0",
+  "pytest-cov>=5.0.0",
   "black>=24.4.0",
   "mypy>=1.10.0",
   "ruff>=0.4.0",
@@ -53,3 +54,6 @@ python_version = "3.10"
 warn_redundant_casts = true
 warn_unused_ignores = true
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "--cov=gloggur --cov-report=term-missing --cov-report=xml --cov-report=html"
