--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "gloggur"
 version = "0.1.0"
@@ -19,18 +23,20 @@ dependencies = [
   "pyyaml>=6.0",
   "tree-sitter>=0.25",
   "tree-sitter-language-pack>=0.13.0",
-  "google-genai>=0.5",
-  "sentence-transformers>=2.7",
   "faiss-cpu>=1.8",
   "numpy>=1.26",
-  "openai>=1.3",
-  "tenacity>=8.3",
 ]
 
 [project.optional-dependencies]
 local = ["sentence-transformers>=2.7"]
-openai = ["openai>=1.3"]
+openai = ["openai>=1.3", "tenacity>=8.3"]
 gemini = ["google-genai>=0.5"]
+all = [
+  "sentence-transformers>=2.7",
+  "openai>=1.3",
+  "tenacity>=8.3",
+  "google-genai>=0.5",
+]
 dev = [
   "pytest>=8.2.0",
   "pytest-cov>=5.0.0",
