--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,11 @@ dependencies = [
   "tree-sitter-language-pack>=0.13.0",
   "faiss-cpu>=1.8",
   "numpy>=1.26",
+  "sentence-transformers>=2.7",
 ]
 
 [project.optional-dependencies]
-local = ["sentence-transformers>=2.7"]
+local = []
 openai = ["openai>=1.3", "tenacity>=8.3"]
 gemini = ["google-genai>=0.5"]
 all = [
