total purge of the "validate"/"validation" names

--- a/.env.example
+++ b/.env.example
@@ -11,13 +11,13 @@ GEMINI_API_KEY=
 GOOGLE_API_KEY=
 OPENAI_API_KEY=
 
-# Validation logging (optional)
+# Verification logging (optional)
 GLOGGUR_LOG_LEVEL=INFO
 GLOGGUR_LOG_FILE=
 GLOGGUR_TRACE_ID=
 GLOGGUR_DEBUG_LOGS=
 
-# Validation performance thresholds (optional)
+# Verification performance thresholds (optional)
 GLOGGUR_PERF_INDEX_MAX_MS=30000
 GLOGGUR_PERF_INCREMENTAL_MAX_MS=10000
 GLOGGUR_PERF_SEARCH_MAX_MS=5000
