--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   verify:
     runs-on: ubuntu-latest
+    env:
+      GLOGGUR_SKIP_DOCSTRING_AUDIT: "1"
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
