--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -5,14 +5,10 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
-  schedule:
-    # Run verification daily at 2 AM UTC.
-    - cron: '0 2 * * *'
   workflow_dispatch:
 
 jobs:
   tests:
-    if: github.event_name == 'push' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     env:
       PYTHONUNBUFFERED: "1"
@@ -34,52 +30,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
 
-      - name: Run Test Suite
+      - name: Run pytest
         run: pytest
-
-  verification:
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      GLOGGUR_SKIP_DOCSTRING_AUDIT: "1"
-      PYTHONPATH: "."
-    strategy:
-      matrix:
-        python-version: ["3.11"]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e .
-
-      - name: Run Phase 1 (Smoke Tests)
-        run: python scripts/run_smoke.py
-
-      - name: Run Phase 2 (Embedding Providers)
-        run: python scripts/run_provider_probe.py
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-
-      - name: Run Phase 3 & 4 (Edge Cases & Performance)
-        run: python scripts/run_edge_bench.py
-
-      - name: Generate Full Report
-        if: always()
-        run: |
-          python scripts/run_suite.py --output verification_report.md
-
-      - name: Upload Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: verification-report-py${{ matrix.python-version }}
-          path: verification_report.md
